--- a/SecondBrain/Views/Shared/_Layout.cshtml
+++ b/SecondBrain/Views/Shared/_Layout.cshtml
@@ -1,6 +1,23 @@
 ﻿@{
     ViewData["typeDisplay"] = 0;
 }
+@{
+    DateOnly today;
+    string FullDate;
+    Console.WriteLine(TempData["CurrentDate"].ToString());
+    if (1 == 1)
+    {
+        today = DateOnly.FromDateTime(DateTime.Now);
+        string fullDay = today.Year.ToString() + "-" + (today.Month < 10 ? "0" + (today.Month).ToString() : (today.Month).ToString()) + "-" + (today.Day < 10 ? "0" + today.Day.ToString() : today.Day.ToString());
+        TempData["CurrentDate"] = fullDay;
+        TempData["FullDate"] = today.ToString();
+    } else
+    {
+        FullDate = TempData["FullDate"]?.ToString();
+        today = DateOnly.Parse(FullDate);
+    }
+}
+@using System.Globalization
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,17 +33,35 @@
     <header class="position-sticky top-0 w-100" style="height: 10vh; z-index: 9999;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="height: 10vh; z-index: 9999;"sss>
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SecondBrain</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="d-flex">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SecondBrain</a>
+                    <button style="background:none; border:none; padding:0; margin:0;" onclick="@{
+                            today = today.AddDays(-7);
+                            string thefullDay = today.Year.ToString() + "-" + (today.Month < 10 ? "0" + (today.Month).ToString() : (today.Month).ToString()) + "-" + (today.Day < 10 ? "0" + today.Day.ToString() : today.Day.ToString());
+                            TempData["CurrentDate"] = thefullDay.ToString();
+                            TempData["FullDate "] = today.ToString();
+                        } window.location.reload(); console.log(1);">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
+                            <polygon points="60,10 20,50 60,90" fill="black" />
+                        </svg>
+                    </button>
+                    <div class="d-flex align-items-center">
+                        @{
+                            DateTime date = DateTime.ParseExact(TempData["CurrentDate"]?.ToString(), "yyyy-MM-dd", CultureInfo.InvariantCulture);
+                            string fullTime = date.ToString("dd, MMMM, yyyy", CultureInfo.InvariantCulture);
+                        }
+                        @fullTime
+                    </div>
                 </div>
             </div>
-            @if (ViewData["Title"] == "Home Page")
+            <button style="background:none; border:none; padding:0; margin:0;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 100 100">
+                    <polygon points="40,10 80,50 40,90" fill="black" />
+                </svg>
+            </button>
+            @if (@ViewData["Title"].ToString() == "Index")
             {
-                <div class="form-group">
+                <div class="form-group" style="width: 6%;">
                     <select onchange="" class="form-control" id="typeDisplay">
                         <option>Week</option>
                         <option>Month</option>
